The main business logic has been completed